# TestCode

./: .gitignore  README.md
BSearch/: BSearch.cpp
DownCast/: DownCast.cpp  Makefile
Inheritance/: Inheritance.cpp
IsPalindrome/: IsPalindrome.cpp  Makefile
Lambdas/: Lambdas.cpp
MoveSemantics/: MoveSemantics.cpp
Raise/: Raise.cpp
TestAny/: CMakeLists.txt  main.cpp
ThreadTest/: Makefile  ThreadTest.cpp
VirtualInheritance/: VirtualInheritance.cpp
fib/: CMakeLists.txt  main.cpp
